# ChangeLog for net-dialup/accounting
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  28 Mar 2010; Martin Väth <martin@mvath.de>
  accounting-1.59.38-r2.ebuild:
  import with minor changes from a personal overlay.