@@ -1,6 +1,6 @@
 AUX ip-down.sh 109 RMD160 6e9e230aa5ea0497f32a93c0bdb0f000fc4431ce SHA1 f16fe455e04f0b28d70a80f17149c86f01dc057c SHA256 8aab51ac919fa62332f52a03ed2874bd9b25d7abd42110f0c44b895fcccd5a33
 AUX ip-up.sh 142 RMD160 d1966b48de496c5ffc7e74e01520e1c065107436 SHA1 0142b743b822ef2c3f3c443c29375453e9604665 SHA256 cefb883c89eacd2ef9d8ca7c2d722ad25f39df8bbd6982ff17a3fd60cf680b3e
-DIST smpppd-1.59-38.src.rpm 156352 RMD160 7cc99062ea13daa1342e78977753b5833aa22ba5 SHA1 37d5d2788180041c6ef5f8417b42970133ca9c23 SHA256 e9fdc45ceda76ac32efebfbb06f56b0eb7f3d2e3a7f7f982f67d867167af578b
-EBUILD accounting-1.59.38-r2.ebuild 1982 RMD160 83d737ec3c795e8d1a2a3ff6b57c4139103cbc38 SHA1 86bc32a5e0460cfa62ddf72b47c582d591d38ff6 SHA256 d26b9a79e82d8e0cf1b2b237efeb355ab8306842a36afb7ac867df4b37d56f98
-MISC ChangeLog 270 RMD160 0c5cb48b71241ba0132b6268bf03b7cedb14d798 SHA1 24bd9154ed746956c57d68ef06a10522538b3813 SHA256 9fa4047743c3a96e63faa77d37923d7271551a91a9794a0208adfbca76d06656
+DIST smpppd-1.60.45-3.1.src.rpm 175561 RMD160 d66613ec438255af89ac864b53fb21a8d401eda3 SHA1 74d2dabad00f8928c115121e1d95cb5a0e41f57b SHA256 2203eaf1e358219cd208ccb2bb104dd39408eb9b12411991b596ccc45a0b2f14
+EBUILD accounting-1.60.45.3.1.ebuild 1906 RMD160 ea673e301042669977c90a784dab1c7d7320628e SHA1 dce1863a28c51cbc49768133292b7f66651329c4 SHA256 b04d95b643e5b381ff1444e2c8b255da980ff14352ff88c94ea26c570c7d2884
+MISC ChangeLog 472 RMD160 d60ce93b3c084441bc70824e0a6438d6e885ac5f SHA1 b73027d7af82f61a7832d34c0ac93c00da209e12 SHA256 6eb6f5bda074698ba52bf5e5ae1c8df34aa777bab8bf4e1617ae6c20ff21827e
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
