@@ -1,4 +1,4 @@
-DIST flashgot-1.2.1.27.xpi 334727 RMD160 855edc54432143e499f9a2e15ad29032d4bb0178 SHA1 ab0a10e4c227fdf8e7403e8990af9d80aa0b3629 SHA256 6336488ee27482992f4f1c5ee618108baa7f8ebc1ae5eae0b6d2e1c4952cac9d
-EBUILD flashgot-1.2.1.27.ebuild 394 RMD160 45ed08a08bee26e6f0132e98d8db39ec327f4516 SHA1 809c7cd563ed96037be3a2e8c22a5e504a966f9c SHA256 0cb562996c509d1dde7e4ffd48ae9ab558b9ef001351cdfd4a00d7539dd53a3b
-MISC ChangeLog 1149 RMD160 27851a4fca6cd6437264eef51be0d562f5ffaf92 SHA1 6d1369eaa3492b1a6269e26171e24950c841f25b SHA256 c1f21e00558f225ab3dee3bca178026f7c58eb768041147f35462db6ad15164a
+DIST flashgot-1.2.1.28.xpi 335354 RMD160 fcb107f415cdef14fe98408f07579b1a3ac24969 SHA1 e149b5f32f3e05eb5e322c87a28870abf830b440 SHA256 da11b32d694dcfd26aff8b12281985a3221d1301edae5a4ad925a06a530adc60
+EBUILD flashgot-1.2.1.28.ebuild 394 RMD160 45ed08a08bee26e6f0132e98d8db39ec327f4516 SHA1 809c7cd563ed96037be3a2e8c22a5e504a966f9c SHA256 0cb562996c509d1dde7e4ffd48ae9ab558b9ef001351cdfd4a00d7539dd53a3b
+MISC ChangeLog 1037 RMD160 07a644f0b9ff5427d4e19ff6db1b67fd87a315d8 SHA1 6609c7393768a8e128fd769167dcfc1be8bbffa7 SHA256 1a38b1499d546266320c8bd3fcb316cd2200bb755572f91260912d5cc3da1c52
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
