@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+* accounting-1.60.45.3.1.ebuild
+
+  25 Jul 2010; Martin Väth <martin@mvath.de>
+  Bump and remove old, since old version can no longer be downloaded.
+  Bump to EAPI="3", use tc-getCXX
+
+* accounting-1.59.38-r2.ebuild
+
   28 Mar 2010; Martin Väth <martin@mvath.de>
-  accounting-1.59.38-r2.ebuild:
   import with minor changes from a personal overlay.
